PharmaDemo/src/objects/Call_Plan_Members__c.object
<CustomObject>
    <fields>
        <fullName>Appt__c</fullName>
        <formula>HYPERLINK(&quot;apex/callreport?type=Appointment&amp;contactid=&quot; &amp;  Contact__c  &amp; &quot;&amp;accountid=&quot; &amp;  Contact__r.Account.Id   , IMAGE(&quot;/img/icon/alarmClock16.gif&quot;,&quot;Create Location Appointment&quot;),&quot;_parent&quot;)</formula>
        <label>Appt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <formula>Call_Plan__r.Date__c + Day_no__c + (7 *  (Week_Number__c -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Plan__c</fullName>
        <label>Call Plan</label>
        <referenceTo>Call_Plan__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Call_Plan_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <formula>HYPERLINK(&quot;apex/callreport?type=1:1&amp;contactid=&quot; &amp; Contact__c &amp; &quot;&amp;accountid=&quot; &amp;  Contact__r.Account.Id  , IMAGE(&quot;/img/icon/cellPhone16.gif&quot;,&quot;Create Location Call&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Plan Members</relationshipLabel>
        <relationshipName>Call_Plan_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_no__c</fullName>
        <formula>CASE(TEXT( Day__c ),
&quot;Monday&quot;,1,
&quot;Tuesday&quot;,2,
&quot;Wednesday&quot;,3,
&quot;Thursday&quot;,4,
&quot;Friday&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Contact__r.Account.Id ,   Contact__r.Account.Name   ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Call_Plan__r.Objective__r.Id , Call_Plan__r.Objective__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Call_Plan__r.Product__r.Id , Call_Plan__r.Product__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Call_Plan__r.Promotion__r.Id , Call_Plan__r.Promotion__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <label>Week Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Call Plan Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>View__c</columns>
        <columns>Call_Date__c</columns>
        <columns>Appt__c</columns>
        <columns>Call_Report__c</columns>
        <columns>Contact__c</columns>
        <columns>Location__c</columns>
        <columns>Call_Plan__c</columns>
        <columns>Objective__c</columns>
        <columns>Product__c</columns>
        <columns>Promotion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CallsThisWeek</fullName>
        <columns>View__c</columns>
        <columns>Call_Date__c</columns>
        <columns>Appt__c</columns>
        <columns>Call_Report__c</columns>
        <columns>Contact__c</columns>
        <columns>Location__c</columns>
        <columns>Objective__c</columns>
        <columns>Product__c</columns>
        <columns>Promotion__c</columns>
        <columns>Call_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Calls this week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CPM-{0000}</displayFormat>
        <label>Call Plan Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plan Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>